<resources>
    <string name="app_name">VocApp</string>
    <string name="vocapp_logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro">VocApp is a purposive app for learning new words and improving vocabulary for all speakers of English, from beginner to advanced learners.</string>
    <string name="start_button">Let\'s Start!</string>
    <string name="welcome_to_vocapp">Welcome to VocApp!</string>
    <string name="librarylogo">librarylogo</string>
    <string name="before_you_start">Before You Start,</string>
    <string name="select_a_level">Select a level according to your vocabulary skill.</string>
    <string name="levelSelectedButton">OK</string>
    <string name="explain_app">The definition of the word will appear on the screen for each question and you will be expected to write the word itself according to this definition. Your score will change according to the difficulty of the words. The lower limit of the score is 0 and the upper limit is 5. You will know your score at the end of the test.</string>
    <string name="enter_the_word">Enter the word</string>
    <string name="check_answer">Check Answer</string>
    <string name="next_question">Next Questıon</string>
    <string name="wrong_answer_">Wrong Answer: 0</string>
    <string name="correct_answer_">Correct Answer: 0</string>
    <string name="loginHeader">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">LOGIN</string>
    <string name="no_account">No account?</string>
    <string name="signUpButton">SIGN UP</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="signUpButton2">SIGN UP</string>
    <string name="your_profile">Your Profile</string>
    <string name="full_name1">Full Name:</string>
    <string name="email1">Email:</string>
    <string name="backButton">Back</string>
    <string name="profileicon">profileIcon</string>
    <string name="buttonRandomm">Button</string>
    <string name="tap_the_icon_to_see_your_profile">Tap the icon to see your profile.</string>
    <string name="profileIcon">TODO</string>
    <string name="full_name3">Full Name</string>
    <string name="to_understand_your_english_level_you_must_take_a_20_question_placement_test">To understand your English level, you must take a 20-question placement test.</string>
    <string name="total_score1">Total Score:</string>
    <string name="your_english_vocabulary_level_is">Your English vocabulary level is</string>
    <string name="total_score4">Total score:</string>
    <string name="here_is_your_test_result">Here is your test result!</string>
    <string name="logout">LOGOUT</string>
    <string name="score5">Score:</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="textviewlasttt2">TextView</string>
    <string name="start_learn_ng">Start learnıng!</string>
    <string name="todo6">TODO</string>
    <string name="explanation3">The answers you give throughout your learning process will affect the difficulty level of the next questions.</string>
</resources>